name:                sdl2-image
version:             0.1.0.0
synopsis:            Support for SDL2_image library.
license:             PublicDomain
license-file:        LICENSE
author:              Joshua DeSeno <jdeseno@gmail.com>
maintainer:          Joshua DeSeno <jdeseno@gmail.com>
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
description:
  FFI Bindings for the SDL2_image SDL extension.
  See https://www.libsdl.org/projects/SDL_image/ for details.

library
  default-language: Haskell2010
  default-extensions:
    CPP,
    ForeignFunctionInterface
  includes:
    SDL.h,
    SDL_image.h
  
  if !os(windows)
    pkgconfig-depends:
      sdl2 >= 2.0.0,
      SDL2_image >= 2.0.0

  build-depends:
    base >=4,
    SDL2
  ghc-options: -Wall
  exposed-modules:     
    Graphics.UI.SDL.Image

